fixed error in pokemonlist.ts now not showing error in console , css done mostley

--- a/src/app/loginPage/login-page/login-page.component.css
+++ b/src/app/loginPage/login-page/login-page.component.css
@@ -1,3 +1,49 @@
-.input{
-    background-color: antiquewhite;
+.input {
+  background-color: antiquewhite;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 60vh;
+}
+.input {
+  margin: 1rem 0;
+  border: 2px solid gray;
+  border-radius: 5px;
+  outline: none;
+  padding: 12px 0;
+  width: 17rem;
+}
+button {
+  border: none;
+  cursor: pointer;
+}
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #314755 0%,
+    #26a0da 51%,
+    #314755 100%
+  );
+}
+.btn-grad {
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
 }
